--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 80vw;
+    width: 820px;
 }
 
 #illustration-div{
